--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,21 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v3
-      - name: Check formatting
-        run: cargo +nightly fmt -- --check
       - name: Run clippy
         run: cargo clippy
       - name: Run tests
         run: cargo test --verbose
+
+  check-formatting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Rust nightly
+        uses: dtolnay/rust-toolchain@nightly
+      - name: Install rustfmt
+        run: rustup component add rustfmt --toolchain nightly
+      - name: Check formatting
+        run: cargo +nightly fmt -- --check
 
   coverage:
     name: Test Coverage
