Restructured Open-WBO Cargo TOML and added specific readme

--- a/lib/open_wbo_ffi/Cargo.toml
+++ b/lib/open_wbo_ffi/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
 name = "logicng-open-wbo-sys"
 version = "0.1.0-alpha.1"
-description = "Bindings for OpenWBO"
 authors = ["BooleWorks GmbH <info@booleworks.com>"]
-homepage = "https://www.logicng.org/"
-repository = "https://github.com/booleworks/logicng-rs"
-documentation = "https://docs.rs/logicng-open-wbo-sys/"
-license = "MIT OR Apache-2.0"
 edition = "2021"
 include = ["/src", "/open_wbo", "/open_wbo_wrapper"]
+
+description = "LogicNG Bindings for OpenWBO"
+license = "MIT OR Apache-2.0"
 keywords = ["FFI", "solver", "MaxSAT"]
 categories = ["external-ffi-bindings"]
+readme = "README.md"
+documentation = "https://docs.rs/logicng-open-wbo-sys/"
+homepage = "https://www.logicng.org/"
+repository = "https://github.com/booleworks/logicng-rs"
 
 [lib]
 crate-type = ["lib"]
