Simplify include in TOMLs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "logicng"
 version = "0.1.0-alpha.3"
 authors = ["BooleWorks GmbH <info@booleworks.com>"]
 edition = "2021"
-include = ["/src", "/lib"]
+include = ["/src"]
 
 description = "A Library for Creating, Manipulating, and Solving Boolean Formulas"
 license = "MIT OR Apache-2.0"
