Update sharpsat include paths for Intel macs

--- a/lib/sharp_sat_ffi/sharp_sat_wrapper/CMakeLists.txt
+++ b/lib/sharp_sat_ffi/sharp_sat_wrapper/CMakeLists.txt
@@ -13,7 +13,7 @@ IF(UNIX)
     IF(CMAKE_APPLE_SILICON_PROCESSOR)
       include_directories(/opt/homebrew/Cellar/gmp/6.3.0/include)
     ELSE(CMAKE_APPLE_SILICON_PROCESSOR)
-      include_directories(/usr/local/Cellar/gmp/6.3.0/include)
+      include_directories(/usr/local/include)
     ENDIF(CMAKE_APPLE_SILICON_PROCESSOR)
   ELSE(APPLE)
 
