apply fmt and clippy

--- a/clippy.toml
+++ b/clippy.toml
@@ -1,1 +1,1 @@
-doc-valid-idents = ["LogicNG", "MaxSAT", "MiniSAT", ".."]
+doc-valid-idents = ["LogicNG", "MaxSAT", "MiniSAT", "OpenWBO", "CVig", ".."]
