--- a/lib/sharp_sat_ffi/Cargo.toml
+++ b/lib/sharp_sat_ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "logicng-sharp-sat-sys"
-version = "0.1.0-alpha.1"
+version = "0.1.0"
 authors = ["BooleWorks GmbH <info@booleworks.com>"]
 edition = "2024"
 # build = "build.rs"
